[gd_scene load_steps=6 format=3 uid="uid://bjgyylqm3xc11"]

[ext_resource type="Script" path="res://player.gd" id="1_16goh"]
[ext_resource type="PackedScene" uid="uid://tb1yinrrwcmg" path="res://observer.tscn" id="2_4ws1n"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_353ym"]
resource_local_to_scene = true
points = PackedVector3Array(-0.0682069, 0.0383664, -0.05, -0.0682069, -0.0383666, -0.05, 0.0682069, 0.0383664, -0.05, 0.0682069, -0.0383666, -0.05, -136.411, 76.7309, -99.9977, -136.411, -76.7309, -99.9977, 136.411, 76.7309, -99.9977, 136.411, -76.7309, -99.9977)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2huvx"]
radius = 0.25
height = 1.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vj0us"]
radius = 0.25
height = 1.4

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_16goh")
camera_sens = 10.0

[node name="PlayerCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
current = true
far = 100.0

[node name="LookRay" type="RayCast3D" parent="PlayerCam"]
visible = false
exclude_parent = false
target_position = Vector3(0, 0, -3)
collision_mask = 4

[node name="HeldObjectPosition" type="Marker3D" parent="PlayerCam"]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, -0.1, -1.3)
visible = false

[node name="PlayerObserver" parent="PlayerCam" instance=ExtResource("2_4ws1n")]

[node name="CollisionShape3D" parent="PlayerCam/PlayerObserver" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.013, 0.008, 0)
shape = SubResource("ConvexPolygonShape3D_353ym")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
visible = false
shape = SubResource("CapsuleShape3D_2huvx")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
visible = false
mesh = SubResource("CapsuleMesh_vj0us")

[editable path="PlayerCam/PlayerObserver"]
